--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -67,7 +67,7 @@ body {
   border-radius: calc(var(--curve) * 1px);    
   background-color: var(--surface-color);      
   transform: translateY(100%);
-  transition: .2s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 
 .card:hover .card__overlay {
@@ -90,7 +90,7 @@ body {
   width: 80px;
   height: 80px;
   position: absolute;
-  bottom: 100%;
+  bottom: 0100%;
   right: 0;      
   z-index: 1;
 }
