--- a/src/Style/NavBar.css
+++ b/src/Style/NavBar.css
@@ -22,7 +22,7 @@
     padding-left:7%;
   }
   
-  #trapezoid a, .subnavbtn {
+  #trapezoid a, .subnavbtn ,.catagory{
    -webkit-transform: rotateX(180deg);
     transform: rotateX(180deg);
   }
@@ -54,6 +54,7 @@
   }
   
   
+  
   .subnav .subnavbtn {
     font-size: 16px; 
     border: none;
@@ -68,7 +69,7 @@
     transition: all 0.5s ease;
   }
   
-  .navbar a:hover, .subnav:hover .subnavbtn {
+  .navbar a:hover, .subnav:hover .subnavbtn ,.catagory.catagorybtn{
     background:#8CA6DB;
     color: black;
     border-radius:5px;
@@ -77,4 +78,27 @@
     display: flex;
     justify-content: center;
   }
+/* 
+  .catagory{
+    float: left;
+    overflow: hidden;
+    
+  }
   
+  .catagory:hover{
+    display: flex;
+    justify-content: center;
+  } */
+  .catagory .catagorybtn {
+    font-size: 16px; 
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 25px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    transition: all 0.5s ease;
+  }
