--- a/src/Style/Catagories.css
+++ b/src/Style/Catagories.css
@@ -1,4 +1,4 @@
-
+/* 
 .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -11,19 +11,19 @@
   .card {
     position: relative;
     display: block;
-    height: 84%;  
+    height: 84%;   */
     /* height agar main ny 100 ki to yeah dobara nechy wala white colour show kary ga */
-    border-radius: calc(var(--curve) * 1px);
+    /* border-radius: calc(var(--curve) * 1px);
     overflow: hidden;
     text-decoration: none;
   }
   
   .card__image {      
-    width: 100%;
+    width: 100%; */
     /* height: auto; */
-    height: 60vh;
+    /* height: 60vh;
   }
-  
+   */
   /* .card__overlay {
     position: absolute;
     bottom: 0;
@@ -39,7 +39,7 @@
   /* .card:hover .card__overlay {
     transform: translateY(0);
   } */
-  
+/*   
   .card__header {
     position: relative;
     display: flex;
@@ -50,9 +50,9 @@
     background-color: var(--surface-color);
     /* transform: translateY(-100%); */
     /* transition: .2s ease-in-out; */
-  }
+  /* } */
   
-  .card__arc {
+  /* .card__arc {
     width: 80px;
     height: 80px;
     position: absolute;
@@ -64,12 +64,12 @@
   .card__arc path {
     fill: var(--surface-color);
     d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
-  }       
+  }        */
   
   /* .card:hover .card__header {
     transform: translateY(0);
   } */
-  
+/*   
   .card__thumb {
     flex-shrink: 0;
     width: 50px;
@@ -90,7 +90,7 @@
     font-size: .8em; 
     color: #D7BDCA;  
   }
-  
+   */
   /* .card__status {
     font-size: .8em;
     color: #D7BDCA;
