--- a/src/Style/Footer.css
+++ b/src/Style/Footer.css
@@ -34,7 +34,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #f8f9fa;
+  /* background: #f8f9fa; */
   position: relative;
   text-align: center;
   transition: 0.3s background ease;
@@ -101,9 +101,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border: none;
-    outline: none;
-    padding: 0 20px;
   }
   
   .subscription .submit-email {
@@ -132,12 +129,12 @@
   .subscription .submit-email .before-submit,
   .subscription .submit-email .after-submit {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    /* top: 0; */
+    left: 2px;
+    /* width: 100%;
+    height: 100%; */
     text-align: center;
-    line-height: 38px;
+    line-height: 0px;
     transition: visibility .35s ease-in-out,
       opacity .35s ease-in-out;
   }
