--- a/src/Style/Login.css
+++ b/src/Style/Login.css
@@ -1,7 +1,5 @@
-/* body{
-    background-color: #080710;
-}
-.background{
+
+.login-background{
     width: 430px;
     height: 520px;
     position: absolute;
@@ -9,13 +7,13 @@
     left: 50%;
     top: 50%;
 }
-.background .shape{
+.login-background .login-shape{
     height: 200px;
     width: 200px;
     position: absolute;
     border-radius: 50%;
 }
-.shape:first-child{
+.login-shape:first-child{
     background: linear-gradient(
         #1845ad,
         #23a2f6
@@ -23,7 +21,7 @@
     left: -80px;
     top: -80px;
 }
-.shape:last-child{
+.login-shape:last-child{
     background: linear-gradient(
         to right,
         #ff512f,
@@ -32,10 +30,10 @@
     right: -30px;
     bottom: -80px;
 }
-form{
+.login-form{
     height: 520px;
     width: 400px;
-    background-color: rgba(255,255,255,0.13);
+    background-color: black;
     position: absolute;
     transform: translate(-50%,-50%);
     top: 50%;
@@ -46,31 +44,25 @@ form{
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
     padding: 50px 35px;
 }
-form *{
-    font-family: 'Poppins',sans-serif;
-    color: #ffffff;
-    letter-spacing: 0.5px;
-    outline: none;
-    border: none;
-}
-form h3{
+
+.login-form h3{
     font-size: 32px;
     font-weight: 500;
     line-height: 42px;
     text-align: center;
 }
 
-label{
+.login-label{
     display: block;
     margin-top: 30px;
     font-size: 16px;
     font-weight: 500;
 }
-input{
+.login-input{
     display: block;
     height: 50px;
     width: 100%;
-    background-color: rgba(255,255,255,0.07);
+    background-color: #445760;
     border-radius: 3px;
     padding: 0 10px;
     margin-top: 8px;
@@ -91,11 +83,11 @@ button{
     border-radius: 5px;
     cursor: pointer;
 }
-.social{
+.login-social{
   margin-top: 30px;
   display: flex;
 }
-.social div{
+.login-social div{
   background: red;
   width: 150px;
   border-radius: 3px;
@@ -104,12 +96,12 @@ button{
   color: #eaf0fb;
   text-align: center;
 }
-.social div:hover{
+.login-social div:hover{
   background-color: rgba(255,255,255,0.47);
 }
-.social .fb{
+.login-social .login-social{
   margin-left: 25px;
 }
-.social i{
+.login-social i{
   margin-right: 4px;
-} */
+}
