--- a/src/Style/Registeration.css
+++ b/src/Style/Registeration.css
@@ -1,6 +1,4 @@
-.regs{
-    background-color: #080710;
-}
+
 .background{
     width: 430px;
     height: 520px;
@@ -33,9 +31,9 @@
     bottom: -80px;
 }
 form{
-    height: 520px;
-    width: 400px;
-    background-color: rgba(255,255,255,0.13);
+    /* height: 520px;
+    width: 400px; */
+    background-color: black;
     position: absolute;
     transform: translate(-50%,-50%);
     top: 50%;
@@ -44,7 +42,7 @@ form{
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255,255,255,0.1);
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
-    padding: 50px 35px;
+    padding: 20px 35px;
 }
 form *{
     font-family: 'Poppins',sans-serif;
@@ -62,18 +60,17 @@ form h3{
 
 label{
     display: block;
-    margin-top: 30px;
+    margin-top: 20px;
     font-size: 16px;
     font-weight: 500;
 }
-input{
+input, select{
     display: block;
     height: 50px;
     width: 100%;
-    background-color: rgba(255,255,255,0.07);
+    background-color: #445760;
     border-radius: 3px;
     padding: 0 10px;
-    margin-top: 8px;
     font-size: 14px;
     font-weight: 300;
 }
@@ -81,18 +78,18 @@ input{
     color: #e5e5e5;
 }
 button{
-    margin-top: 50px;
+    margin-top: 30px;
     width: 100%;
     background-color: #ffffff;
     color: #080710;
-    padding: 15px 0;
+    padding: 10px 0;
     font-size: 18px;
     font-weight: 600;
     border-radius: 5px;
     cursor: pointer;
 }
 .social{
-  margin-top: 30px;
+  margin-top: 10px;
   display: flex;
 }
 .social div{
