--- a/src/Style/Login.css
+++ b/src/Style/Login.css
@@ -67,7 +67,7 @@
 ::placeholder {
   color: #e5e5e5;
 }
-button {
+.login-button {
   margin-top: 50px;
   width: 100%;
   background-color: #ffffff;
