--- a/src/Style/Dashboard.css
+++ b/src/Style/Dashboard.css
@@ -589,11 +589,11 @@ pre code {
     max-width: 960px;
   }
 }
-@media (min-width: 1200px) {
+/* @media (min-width: 1200px) {
   .container {
     max-width: 1140px;
   }
-}
+} */
 
 .container-fluid {
   width: 100%;
