--- a/src/Style/NavBar.css
+++ b/src/Style/NavBar.css
@@ -1,84 +1,107 @@
-
 #trapezoid {
   z-index: 9999;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    height: 0;
-    border: 80px solid rgba(0,0,0,0);
-    border-top: 0 solid;
-    border-bottom: 100px solid rgba(1, 1, 1, .4);
-    -webkit-border-radius: 20px 20px 0 0;
-    border-radius: 20px 20px 0 0;
-    font: normal 100%/normal Arial, Helvetica, sans-serif;
-    color: rgba(0,0,0,0.7);
-    -o-text-overflow: clip;
-    text-overflow: clip;
-    -webkit-transform: rotateX(180deg);
-    transform: rotateX(180deg);
-    margin-top:-53px;
-    width: 700px;
-    position: relative;
-    transition: all 0.7s ease;
-    padding-left:7%;
-  }
-  
-  #trapezoid a, .subnavbtn ,.catagory{
-   -webkit-transform: rotateX(180deg);
-    transform: rotateX(180deg);
-  }
-  
-  .navbar {
-    position: sticky;
-    top: 0;
-    display:flex;
-    justify-content: center;
-    height: 60px;
-    z-index: 9999;
-  }
-  
-  .navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 25px;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    transition: all 0.5s ease;
-  }
-  
-  .subnav {
-    float: left;
-    overflow: hidden;
-  }
-  
-  
-  
-  .subnav .subnavbtn {
-    font-size: 16px; 
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 25px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    transition: all 0.5s ease;
-  }
-  
-  .navbar a:hover, .subnav:hover .subnavbtn ,.catagory.catagorybtn{
-    background:#8CA6DB;
-    color: black;
-    border-radius:5px;
-  }
-  .subnav:hover{
-    display: flex;
-    justify-content: center;
-  }
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0;
+  border: 80px solid rgba(0, 0, 0, 0);
+  border-top: 0 solid;
+  border-bottom: 100px solid rgba(1, 1, 1, 0.4);
+  -webkit-border-radius: 20px 20px 0 0;
+  border-radius: 20px 20px 0 0;
+  font: normal 100% / normal Arial, Helvetica, sans-serif;
+  color: rgba(0, 0, 0, 0.7);
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  -webkit-transform: rotateX(180deg);
+  transform: rotateX(180deg);
+  margin-top: -53px;
+  width: 700px;
+  position: relative;
+  transition: all 0.7s ease;
+  padding-left: 7%;
+}
+
+#trapezoid a,
+.subnavbtn,
+.catagory {
+  -webkit-transform: rotateX(180deg);
+  transform: rotateX(180deg);
+}
+
+.navbar {
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  height: 60px;
+  z-index: 9999;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 25px;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  transition: all 0.5s ease;
+}
+
+.logout-btn {
+  background-color: transparent;
+  float: left;
+  font-size: 16px;
+  color: white;
+  font-weight: normal;
+  text-align: center;
+  padding: 14px 25px;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  transition: all 0.5s ease;
+  border: none;
+}
+.logout-btn:hover {
+  background: #8ca6db;
+  color: black;
+  border-radius: 5px;
+}
+.nav-user-name {
+  color: red;
+}
+.subnav {
+  float: left;
+  overflow: hidden;
+}
+
+.subnav .subnavbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 25px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  transition: all 0.5s ease;
+}
+
+.navbar a:hover,
+.subnav:hover .subnavbtn,
+.catagory.catagorybtn {
+  background: #8ca6db;
+  color: black;
+  border-radius: 5px;
+}
+.subnav:hover {
+  display: flex;
+  justify-content: center;
+}
 /* 
   .catagory{
     float: left;
@@ -90,16 +113,16 @@
     display: flex;
     justify-content: center;
   } */
-  .catagory .catagorybtn {
-    font-size: 16px; 
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 25px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    transition: all 0.5s ease;
-  }
+.catagory .catagorybtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 25px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  transition: all 0.5s ease;
+}
