--- a/src/Style/NotAuth.css
+++ b/src/Style/NotAuth.css
@@ -2,7 +2,8 @@
 
 .na-container {
   font-family: 'Raleway', sans-serif;
-  background-color: #342643;
+  background: linear-gradient(to right, rgb(39, 70, 133) 0%, rgb(44, 140, 155) 100%);
+
   height: 100vh;
   padding: 10px;
   display: flex;
