--- a/src/Style/Sidebar.css
+++ b/src/Style/Sidebar.css
@@ -13,7 +13,7 @@ main {
 .sidebar {
   background: #000;
   color: #fff;
-  height: 100vh;
+  min-height: 100vh;
   width: 200px;
   transition: all 0.5s;
 }
